--- a/Netflix/net.css
+++ b/Netflix/net.css
@@ -13,13 +13,13 @@ body{
     background-repeat: no-repeat;
     background-position: center center;
     position: relative;
-    height : 80vh;
+    height : 644px;
     background-size: max(100vw,1200px);
 }
 .box
 {
     opacity: 0.69;
-    height : 80vh;
+    height : 644px;
     position : absolute;
     top: 0;
     width: 100%;
@@ -244,4 +244,76 @@ footer {
     margin: auto;
     padding: 40px 0;
     color: white;
+}
+
+@media screen and (max-width:1300px) {
+    nav
+    {
+        max-width: 90vw;
+    }
+    
+    .first
+    {
+        flex-wrap: wrap;
+    }
+
+    .image img
+    {
+        width: 305px;
+    }
+
+    .image video
+    {
+        width: 305px;
+    }
+
+    .text> :nth-child(1)
+    {
+        font-size: 32px;
+    }
+
+    .text> :nth-child(2)
+    {
+        font-size: 32px;
+    }
+
+    .text> :nth-child(3)
+    {
+        font-size: 18px;
+    }
+
+    .text> :nth-child(4)
+    {
+        font-size: 12px;
+    }
+
+    .email{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 26px;
+    }
+
+    .faq{
+        text-align: center;
+        font-size: 32px;
+    }
+
+    footer
+    {
+        max-width: 90vw;
+        padding: 75px 0;
+    }
+
+    .con
+    {
+        align-items: center;
+    }
+
+    .foot{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 25px;
+    }
 }
